// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly the desktop field 1`] = `
<fieldset
  className="MuiFormControl-root-1 MuiFormControl-fullWidth-4"
  id="foo-fieldset"
>
  <label
    className="MuiFormLabel-root-16 MuiInputLabel-root-5 MuiInputLabel-formControl-10 MuiInputLabel-animated-13"
    data-shrink={false}
    htmlFor="foo"
  >
    foo
  </label>
  <div
    className="MuiInputBase-root-36 MuiInput-root-23 MuiInput-underline-27 MuiInputBase-formControl-37 MuiInput-formControl-24"
    onClick={[Function]}
  >
    <input
      aria-invalid={false}
      className="MuiInputBase-input-46 MuiInput-input-31"
      disabled={false}
      id="foo"
      name="foo"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={false}
      type="text"
    />
  </div>
  <p
    className="MuiFormHelperText-root-53"
    id="foo-text"
  />
</fieldset>
`;

exports[`renders correctly the desktop field with error 1`] = `
<fieldset
  className="MuiFormControl-root-1 MuiFormControl-fullWidth-4"
  id="foo-fieldset"
>
  <label
    className="MuiFormLabel-root-16 MuiFormLabel-error-19 MuiInputLabel-error-8 MuiInputLabel-root-5 MuiInputLabel-formControl-10 MuiInputLabel-animated-13"
    data-shrink={false}
    htmlFor="foo"
  >
    foo
  </label>
  <div
    className="MuiInputBase-root-36 MuiInput-root-23 MuiInput-underline-27 MuiInputBase-error-42 MuiInput-error-28 MuiInputBase-formControl-37 MuiInput-formControl-24"
    onClick={[Function]}
  >
    <input
      aria-invalid={true}
      className="MuiInputBase-input-46 MuiInput-input-31"
      disabled={false}
      id="foo"
      name="foo"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={false}
      type="text"
    />
  </div>
  <p
    className="MuiFormHelperText-root-53 MuiFormHelperText-error-54"
    id="foo-text"
  >
    bar
  </p>
</fieldset>
`;

exports[`renders correctly the mobile field 1`] = `
<fieldset
  className="MuiFormControl-root-1 MuiFormControl-fullWidth-4"
  id="foo-fieldset"
>
  <div
    className="MuiInputBase-root-36 MuiInput-root-23 MuiInput-underline-27 MuiInputBase-formControl-37 MuiInput-formControl-24"
    label="foo"
    onClick={[Function]}
  >
    <input
      aria-invalid={false}
      className="MuiInputBase-input-46 MuiInput-input-31"
      disabled={false}
      id="foo"
      name="foo"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="foo"
      required={false}
      type="text"
    />
  </div>
  <p
    className="MuiFormHelperText-root-53"
    id="foo-text"
  />
</fieldset>
`;

exports[`renders correctly the mobile field with error 1`] = `
<fieldset
  className="MuiFormControl-root-1 MuiFormControl-fullWidth-4"
  id="foo-fieldset"
>
  <div
    className="MuiInputBase-root-36 MuiInput-root-23 MuiInput-underline-27 MuiInputBase-error-42 MuiInput-error-28 MuiInputBase-formControl-37 MuiInput-formControl-24"
    label="foo"
    onClick={[Function]}
  >
    <input
      aria-invalid={true}
      className="MuiInputBase-input-46 MuiInput-input-31"
      disabled={false}
      id="foo"
      name="foo"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="foo"
      required={false}
      type="text"
    />
  </div>
  <p
    className="MuiFormHelperText-root-53 MuiFormHelperText-error-54"
    id="foo-text"
  >
    bar
  </p>
</fieldset>
`;
